--- a/1savaite/1diena/index.html
+++ b/1savaite/1diena/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link href="style.css" type="text/css" rel="stylesheet">
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Mano tinklalapis</title>
 </head>
 
 <body>
 	<h1>Sveiki atvykę!</h1>
+	<h1>Tinklalapių kūrimo pradmenys</h1>
+	<img src="images/Summer.jpg" width="300" height="170">
+	<br>
+<!-- 
+	<iframe src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/6GUm5g8SG4o?ecver=1"</iframe>
+	 -->
+	<!-- <p id="nammaw"></p> p#mdksfm  ir tab -->
+
+<p>Esu <b>Ieva</b> Drungėlaitė, man 27 m. Esu iš Šiaulių. <i>Noriu išmokti programuoti.</i></p>
+
+
+<ul>
+	<li>Knygos</li>
+	<li>Filmai</li>
+	<li>Saulė</li>
+	<li>Vasara</li>
+</ul>
+
+<p>Citata: <q>Meilė – sunki protinė liga.</q> (Platonas)<p>
+
 </body>
 </html>
