--- a/1savaite/1diena/index.html
+++ b/1savaite/1diena/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<h1>Sveiki atvykę!</h1>
+	<h1>Sveiki atvykę!!!!!!!!!!!!!!</h1>
 	<h1>Tinklalapių kūrimo pradmenys</h1>
 	<img src="images/Summer.jpg" width="300" height="170">
 	<br>
